--- a/index.html
+++ b/index.html
@@ -98,22 +98,25 @@
                 <div>
                     <div class="radial-progress text-red-500 ml-20" style="--value:70;" role="progressbar">87%</div>
                     <h2 class="text-xl font-semibold ml-10">Prayer Facility</h2>
-                    <p class="font-normal text-base">Prayer is important because it <br> helps us to stay close to God.</p>
+                    <p class="font-normal text-base">Prayer is important because it <br> <span class="ml-5">helps us to
+                            stay close to God.</span></p>
                 </div>
                 <div>
                     <div class="radial-progress text-green-500 ml-20" style="--value:70;" role="progressbar">95%</div>
                     <h2 class="text-xl font-semibold ml-9"> Experienced Coach</h2>
-                    <p class="font-normal text-base">We are providing experienced <br> coach to our clients</p>
+                    <p class="font-normal text-base">We are providing experienced <br> <span class="ml-8">coach to our
+                            clients.</span></p>
                 </div>
                 <div>
                     <div class="radial-progress text-yellow-500 ml-20" style="--value:70;" role="progressbar">90%</div>
                     <h2 class="text-xl font-semibold ml-9">Senior Player</h2>
-                    <p class="font-normal text-base">Senior player guide juniors, <br> how to be a best player.</p>
+                    <p class="font-normal text-base">Senior player guide juniors, <br><span class="ml-8"> how to be a
+                            best player.</span></p>
                 </div>
                 <div>
                     <div class="radial-progress text-blue-500 ml-20" style="--value:70;" role="progressbar">80%</div>
                     <h2 class="text-xl font-semibold ml-9">Training Ground</h2>
-                    <p class="font-normal text-base">Our play ground is good <br> and best for our players.</p>
+                    <p class="font-normal text-base ml-9">Our play ground is good <br> and best for our players.</p>
                 </div>
 
                 <hr>
@@ -121,7 +124,9 @@
         </section>
         <section>
             <h1 class="font-extrabold text-4xl font-serif ml-[560px] mt-20">Program Sections</h1>
-            <p class="font-medium text-base ml-[295px] mt-5">With ten men's teams, six ladies teams, a mixed side, a range of youth teams,various touring sides and Back <br> to Hockey sessions,  Working Hockey Club offers hockey to players of any ability.</p>
+            <p class="font-medium text-base ml-[295px] mt-5">With ten men's teams, six ladies teams, a mixed side, a
+                range of youth teams,various touring sides and Back <br> to Hockey sessions, Working Hockey Club offers
+                hockey to players of any ability.</p>
             <div class="flex justify-center gap-8 mr-32">
                 <img class=" w-[495px] blur-sm ml-32 mt-14" src="Images/2.png" alt="">
                 <img class=" w-[495px] h-[290px] mt-[55px] blur-sm" src="Images/3.png" alt="">
@@ -129,6 +134,14 @@
             <div>
                 <img class=" w-[1035px] h-[450px] mt-8 ml-60 blur-sm" src="Images/4.png" alt="">
             </div>
+        </section>
+        <hr class="mt-28">
+        <!-- New Products Sections -->
+        <section>
+            <h1 class="font-extrabold text-4xl font-serif ml-[560px] mt-12">Our New Products</h1>
+            <p class="font-medium text-base ml-[450px] mt-5">In June, Hockey Sports launches a product line for Hockey
+                Technique training. <br> This is a completely new area for one of the world's most respected brands.
+                <hr class="mt-10">
         </section>
     </main>
     <footer>
